sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__sort-elim-eq-col-desc-direction.snap
---
source: sorting.sqltest
expression: |-
  SELECT * FROM articles
      WHERE status = 'published'
      ORDER BY status DESC, category, published_at DESC;
info:
  statement_type: SELECT
  tables:
  - articles
  setup_blocks:
  - sort_elim
  database: ':memory:'
---
QUERY PLAN
`--SEARCH articles USING INDEX idx_articles_status_cat_pub (status=?)
