sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__sort-elim-no-eq-order-non-leading.snap
---
source: sorting.sqltest
expression: |-
  SELECT * FROM articles
      ORDER BY published_at DESC;
info:
  statement_type: SELECT
  tables:
  - articles
  setup_blocks:
  - sort_elim
  database: ':memory:'
---
QUERY PLAN
|--SCAN articles
`--USE SORTER FOR ORDER BY
